              message saying the program doesn't know how to interpret it.

              pamtotga: Ignore extra planes in black and white or grayscale
              input instead of generating junk output.

              Merge build: make old names for JPEG, TIFF, and PNG converter
              programs work (function previously omitted by design because it
              was too hard).

              bmptopnm: Fix array bounds violation when index value in raster
              is too big.  Broken after Netpbm 10.10 (October 2002) but before
              10.19 (November 2003).

              libnetpbm: Fix invalid memory reference in color name processing
              when trivial memory allocation fails.

              pamtojpeg2k: fix incorrect interpretation of -ilyrrates option
              when it contains multiple delimiter characters in a row.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pnmtojbig: fix incorrect handling of -x option.  Always broken
              (pnmtojbig was new in Netpbm 9.2 (May 2000)).

              pjtoppm, pbmtoppa: fix arithmetic overflow.

              Build: fix parallel make.

              Build: fix reference to nonexistent getline on Mac OS X 10.6.

              Build: fix reference to nonexistent strndup on Mac OS X 10.6.

              Merge build: fix duplicate symbol 'prefabCode' in g3topbm,
              pbmtog3.  Introduced in Netpbm 10.79 (June 2017).

18.09.29 BJH  Release 10.84.00

              Add pamaltsat.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add pamtris.  Thanks Lucas Brunno Luna
              <lucaslunar32@hotmail.com>.

              libpbmfont, pbmtext: fix bugs with BDF file lines with
              insufficient number of fields.  Unknown effect.

              pbmtext: -wchar works with built-in fonts.

              pbmtext: improved -verbose information about BDF fonts: